--- a/Resources/config/services/twig_active_for_routes_extension.yaml
+++ b/Resources/config/services/twig_active_for_routes_extension.yaml
@@ -1,5 +1,5 @@
 services:
-    Softspring\CoreBundle\Twig\ActiveForRoutesExtension:
+    Softspring\CoreBundle\Twig\Extension\ActiveForRoutesExtension:
         arguments:
             $requestStack: '@request_stack'
         tags: ['twig.extension']
