--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,28 @@
     "require": {
         "php": "^7.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "8.5.*",
+        "doctrine/orm": "^2.5",
+        "symfony/console": "^3.0 || ^4.0 || ^5.0",
+        "symfony/dependency-injection": "^3.0 || ^4.0 || ^5.0",
+        "symfony/form": "^3.0 || ^4.0 || ^5.0",
+        "symfony/framework-bundle": "^3.0 || ^4.0 || ^5.0",
+        "symfony/twig-bridge": "^3.0 || ^4.0 || ^5.0",
+        "symfony/yaml": "^3.0 || ^4.0 || ^5.0",
+        "twig/twig": "^2.0"
+    },
     "autoload": {
         "psr-4": {
             "Softspring\\CoreBundle\\": ""
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Softspring\\CoreBundle\\Tests\\": "/Tests/"
         }
     },
     "extra": {
