--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
         }
     },
     "conflict": {
-        "symfony/dependency-injection": ">= 4.0.0, < 4.1.12",
-        "symfony/framework-bundle": ">= 4.0.0, < 4.1.12"
+        "symfony/dependency-injection": ">= 4.0.0 < 4.1.12",
+        "symfony/framework-bundle": ">= 4.0.0 < 4.1.12"
     },
     "extra": {
         "branch-alias": {
