--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ php:
   - 7.2
   - 7.3
   
+install: composer update --prefer-dist --no-interaction
+  
 script: ./vendor/bin/phpunit --coverage-text
