--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "symfony/dependency-injection": "^3.0 || ^4.0 || ^5.0",
         "symfony/form": "^3.0 || ^4.0 || ^5.0",
         "symfony/framework-bundle": "^3.0 || ^4.0 || ^5.0",
+        "symfony/doctrine-bridge": "^3.0 || ^4.0 || ^5.0",
         "symfony/twig-bridge": "^3.0 || ^4.0 || ^5.0",
         "symfony/yaml": "^3.0 || ^4.0 || ^5.0",
         "twig/twig": "^2.0"
