--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/doctrine-bridge": "^3.0 || ^4.0 || ^5.0",
         "symfony/twig-bridge": "^3.0 || ^4.0 || ^5.0",
         "symfony/yaml": "^3.0 || ^4.0 || ^5.0",
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+        "symfony/webpack-encore-bundle": "^1.7"
     },
     "autoload": {
         "psr-4": {
