--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "This bundle provides common symfony features.",
     "license": "MIT",
     "require": {
-        "php": "^7.4"
+        "php": ">=7.4"
     },
     "require-dev": {
         "phpunit/phpunit": "8.5.*",
