--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ php:
   
 install: composer update --prefer-dist --no-interaction
   
-script: ./vendor/bin/phpunit --coverage-text
+script:
+  - composer validate
+  - ./vendor/bin/phpunit --coverage-text
+  - ./vendor/bin/php-cs-fixer fix -v --diff --dry-run
