--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
     "require-dev": {
         "phpunit/phpunit": "8.5.*",
         "doctrine/orm": "^2.5",
-        "symfony/console": "^4.4 || ^5.3 || ^6.0",
-        "symfony/dependency-injection": "^4.4 || ^5.3 || ^6.0",
-        "symfony/form": "^4.4 || ^5.3 || ^6.0",
-        "symfony/framework-bundle": "^4.4 || ^5.3 || ^6.0",
-        "symfony/doctrine-bridge": "^4.4 || ^5.3 || ^6.0",
-        "symfony/twig-bridge": "^4.4 || ^5.3 || ^6.0",
-        "symfony/yaml": "^4.4 || ^5.3 || ^6.0",
+        "symfony/console": "^5.4 || ^6.0",
+        "symfony/dependency-injection": "^5.4 || ^6.0",
+        "symfony/form": "^5.4 || ^6.0",
+        "symfony/framework-bundle": "^5.4 || ^6.0",
+        "symfony/doctrine-bridge": "^5.4 || ^6.0",
+        "symfony/twig-bridge": "^5.4 || ^6.0",
+        "symfony/yaml": "^5.4 || ^6.0",
         "twig/twig": "^2.0",
         "symfony/webpack-encore-bundle": "^1.7",
         "friendsofphp/php-cs-fixer": "9999999-dev"
