--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "softspring/events": "^5.0@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "8.5.*",
