--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.4",
-        "softspring/events": "^5.0@dev"
+        "softspring/events": "^5.0@dev",
+        "softspring/doctrine-target-entity-resolver": "^5.0@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "8.5.*",
