--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "softspring/doctrine-target-entity-resolver": "^5.0@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "8.5.*",
+        "phpunit/phpunit": "^9.0",
         "doctrine/orm": "^2.5",
         "symfony/console": "^5.4 || ^6.0",
         "symfony/dependency-injection": "^5.4 || ^6.0",
