--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "symfony/dependency-injection": ">= 4.0.0 < 4.1.12",
         "symfony/framework-bundle": ">= 4.0.0 < 4.1.12"
     },
-    "extra": {
+    "config": {
+        "allow-plugins": false
     }
 }
