--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.4",
+        "softspring/components": "^5.0",
         "softspring/events": "^5.0",
         "softspring/doctrine-target-entity-resolver": "^5.0"
     },
