--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony/yaml": "^5.4|^6.0",
         "twig/twig": "^2.0",
         "symfony/webpack-encore-bundle": "^1.7",
-        "friendsofphp/php-cs-fixer": "9999999-dev"
+        "friendsofphp/php-cs-fixer": "^3.14"
     },
     "autoload": {
         "psr-4": {
